--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -89,10 +89,10 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             -   uses: actions/checkout@v2
-            -   name: Install latest nightly
+            -   name: Install latest nightly-2020-04-06
                 uses: actions-rs/toolchain@v1
                 with:
-                    toolchain: nightly
+                    toolchain: nightly-2020-04-06
                     override: true
             -   name: Cache cargo registry
                 uses: actions/cache@v1
