--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,8 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rocket = "0.4.2"
+actix-web = "2.0.0"
+actix-rt = "1.1.0"
 
 [features]
 # Treat warnings as a build error
