Add deploy tasks

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,12 +10,14 @@ on:
 env:
     REGISTRY_HOST: docker.pkg.github.com
     STAGING_URL: http://staging.journali.nl
-    STAGING_SERVICE_NAME: journali-staging_api
+    STAGING_API_SERVICE: journali-staging_api
+    STAGING_MIGRATOR_SERVICE: journali-staging_migrator
     PRODUCTION_URL: http://journali.nl
-    PRODUCTION_SERVICE_NAME: journali-production_api
+    PRODUCTION_API_SERVICE: journali-production_api
+    PRODUCTION_MIGRATOR_SERVICE: journali-production_migrator
 
 jobs:
-    deliver:
+    deliver-api:
         runs-on: ubuntu-latest
         steps:
             -   uses: actions/checkout@v2
@@ -27,11 +29,25 @@ jobs:
                     password: ${{ github.token }}
                     registry: ${{ env.REGISTRY_HOST }}
                     tag_semver: true
+                    dockerfile: Api.Dockerfile
+    deliver-migrator:
+        runs-on: ubuntu-latest
+        steps:
+            -   uses: actions/checkout@v2
+            -   name: publish migrator docker image
+                uses: elgohr/Publish-Docker-Github-Action@master
+                with:
+                    name: wesleyklop/journali-api/journali-migrator
+                    username: ${{ github.actor }}
+                    password: ${{ github.token }}
+                    registry: ${{ env.REGISTRY_HOST }}
+                    tag_semver: true
+                    dockerfile: Migrator.Dockerfile
     deploy-staging:
         name: deploy to staging
         if: ${{ github.event_name == 'push' }}
         runs-on: self-hosted
-        needs: [deliver]
+        needs: [deliver-api, deliver-migrator]
         steps:
             -   name: login to registry
                 run: echo ${{ github.token }} | docker login ${{ env.REGISTRY_HOST }} -u ${{ github.actor }} --password-stdin
@@ -42,11 +58,10 @@ jobs:
                     step: start
                     token: ${{ github.token }}
                     env: staging
-            -   name: run deployment
-                run: docker service update --with-registry-auth --force ${{ env.STAGING_SERVICE_NAME }}
-            -   name: rollback on deployment failure
-                if: failure()
-                run: docker service rollback ${{ env.STAGING_SERVICE_NAME }}
+            -   name: migrate database
+                run: docker service update --update-failure-action=pause --with-registry-auth --force ${{ env.STAGING_MIGRATOR_SERVICE }}
+            -   name: deploy new api version
+                run: docker service update --update-failure-action=rollback --with-registry-auth --force ${{ env.STAGING_API_SERVICE }}
             -   name: update deployment status
                 uses: bobheadxi/deployments@master
                 if: always()
@@ -63,7 +78,7 @@ jobs:
         name: deploy production
         if: ${{ github.event_name == 'release' }}
         runs-on: self-hosted
-        needs: [deliver]
+        needs: [deliver-api, deliver-migrator]
         steps:
             -   name: login to registry
                 run: echo ${{ github.token }} | docker login ${{ env.REGISTRY_HOST }} -u ${{ github.actor }} --password-stdin
@@ -74,11 +89,13 @@ jobs:
                     step: start
                     token: ${{ github.token }}
                     env: production
-            -   name: run deployment
-                run: docker service update --with-registry-auth --force ${{ env.PRODUCTION_SERVICE_NAME }}
+            -   name: migrate database
+                run: docker service update --with-registry-auth --force ${{ env.STAGING_MIGRATOR_SERVICE }}
+            -   name: deploy new api version
+                run: docker service update --with-registry-auth --force ${{ env.PRODUCTION_API_SERVICE }}
             -   name: rollback on failure
                 if: failure()
-                run: docker service rollback ${{ env.PRODUCTION_SERVICE_NAME }}
+                run: docker service rollback ${{ env.PRODUCTION_API_SERVICE }}
             -   name: update deployment status
                 uses: bobheadxi/deployments@master
                 if: always()
