--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -35,6 +35,7 @@ jobs:
       
       - name: report coverage
         uses: romeovs/lcov-reporter-action@v0.2.17
+        if: ${{ github.event_name == 'pull_request' }}
         with:
           github-token: ${{ github.token }}
           lcov-file: lcov.info
