--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,7 @@ env:
 
 jobs:
     deliver-api:
-        runs-on: ubuntu-latest
+        runs-on: self-hosted
         steps:
             -   uses: actions/checkout@v2
             -   name: publish api docker image
@@ -31,7 +31,7 @@ jobs:
                     tag_semver: true
                     dockerfile: Api.Dockerfile
     deliver-migrator:
-        runs-on: ubuntu-latest
+        runs-on: self-hosted
         steps:
             -   uses: actions/checkout@v2
             -   name: publish migrator docker image
