--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,14 +10,12 @@ on:
 env:
     REGISTRY_HOST: docker.pkg.github.com
     STAGING_URL: http://staging.journali.nl
-    STAGING_API_SERVICE: journali-staging_api
-    STAGING_MIGRATOR_SERVICE: journali-staging_migrator
+    STAGING_SERVICE: journali-staging_api
     PRODUCTION_URL: http://journali.nl
-    PRODUCTION_API_SERVICE: journali-production_api
-    PRODUCTION_MIGRATOR_SERVICE: journali-production_migrator
+    PRODUCTION_SERVICE: journali-production_api
 
 jobs:
-    deliver-api:
+    deliver:
         runs-on: self-hosted
         steps:
             -   uses: actions/checkout@v2
@@ -29,26 +27,27 @@ jobs:
                     password: ${{ github.token }}
                     registry: ${{ env.REGISTRY_HOST }}
                     tag_semver: true
-                    dockerfile: Api.Dockerfile
-    deliver-migrator:
+                    dockerfile: Dockerfile
+    deploy:
+        name: deploy to an environment
         runs-on: self-hosted
+        needs: [deliver]
         steps:
-            -   uses: actions/checkout@v2
-            -   name: publish migrator docker image
-                uses: elgohr/Publish-Docker-Github-Action@master
+            -   name: set environment variables if staging
+                if: ${{ github.event_name == 'push' }}
+                uses: allenevans/set-env@v1.0.0
                 with:
-                    name: wesleyklop/journali-api/journali-migrator
-                    username: ${{ github.actor }}
-                    password: ${{ github.token }}
-                    registry: ${{ env.REGISTRY_HOST }}
-                    tag_semver: true
-                    dockerfile: Migrator.Dockerfile
-    deploy-staging:
-        name: deploy to staging
-        if: ${{ github.event_name == 'push' }}
-        runs-on: self-hosted
-        needs: [deliver-api, deliver-migrator]
-        steps:
+                    SERVICE: ${{ env.STAGING_SERVICE }}
+                    URL: ${{ env.STAGING_URL }}
+                    ENV_NAME: staging
+            -   name: set environment variables if production
+                if: ${{ github.event_name == 'release' }}
+                uses: allenevans/set-env@v1.0.0
+                with:
+                    SERVICE: ${{ env.PRODUCTION_SERVICE }}
+                    URL: ${{ env.PRODUCTION_URL }}
+                    ENV_NAME: production
+
             -   name: login to registry
                 run: echo ${{ github.token }} | docker login ${{ env.REGISTRY_HOST }} -u ${{ github.actor }} --password-stdin
             -   name: start deployment
@@ -57,11 +56,10 @@ jobs:
                 with:
                     step: start
                     token: ${{ github.token }}
-                    env: staging
-            -   name: migrate database
-                run: docker service update --update-failure-action=pause --with-registry-auth --force ${{ env.STAGING_MIGRATOR_SERVICE }}
+                    env: ${{ env.ENV_NAME }}
+                # TODO: Migrate database
             -   name: deploy new api version
-                run: docker service update --update-failure-action=rollback --with-registry-auth --force ${{ env.STAGING_API_SERVICE }}
+                run: docker service update --update-failure-action=rollback --with-registry-auth --force ${{ env.SERVICE }}
             -   name: update deployment status
                 uses: bobheadxi/deployments@master
                 if: always()
@@ -69,41 +67,7 @@ jobs:
                     step: finish
                     token: ${{ github.token }}
                     status: ${{ job.status }}
-                    env_url: ${{ env.STAGING_URL }}
-                    deployment_id: ${{ steps.deployment.outputs.deployment_id }}
-            -   name: logout from registry
-                if: always()
-                run: docker logout ${{ env.REGISTRY_HOST }}
-    deploy-production:
-        name: deploy production
-        if: ${{ github.event_name == 'release' }}
-        runs-on: self-hosted
-        needs: [deliver-api, deliver-migrator]
-        steps:
-            -   name: login to registry
-                run: echo ${{ github.token }} | docker login ${{ env.REGISTRY_HOST }} -u ${{ github.actor }} --password-stdin
-            -   name: start deployment
-                uses: bobheadxi/deployments@master
-                id: deployment
-                with:
-                    step: start
-                    token: ${{ github.token }}
-                    env: production
-            -   name: migrate database
-                run: docker service update --with-registry-auth --force ${{ env.STAGING_MIGRATOR_SERVICE }}
-            -   name: deploy new api version
-                run: docker service update --with-registry-auth --force ${{ env.PRODUCTION_API_SERVICE }}
-            -   name: rollback on failure
-                if: failure()
-                run: docker service rollback ${{ env.PRODUCTION_API_SERVICE }}
-            -   name: update deployment status
-                uses: bobheadxi/deployments@master
-                if: always()
-                with:
-                    step: finish
-                    token: ${{ github.token }}
-                    status: ${{ job.status }}
-                    env_url: ${{ env.PRODUCTION_URL }}
+                    env_url: ${{ env.URL }}
                     deployment_id: ${{ steps.deployment.outputs.deployment_id }}
             -   name: logout from registry
                 if: always()
