--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ actix-web = "2.0.0"
 actix-rt = "1.1.1"
 env_logger = "*"
 diesel = { version = "1.4.3", features = ["postgres", "uuidv07", "r2d2"] }
+diesel_migrations = "1.4.0"
 dotenv = "*"
 
 [features]
