--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,6 +1,7 @@
 name: deploy api
 
 on:
+    pull_request:
     push:
         branches:
             - master
@@ -8,21 +9,28 @@ on:
         types: [created]
 
 env:
+    DATABASE_URL: postgres://journali:journali@postgres:5432/journali
+    IMAGE_NAME: wesleyklop/journali-api/journali-api
     REGISTRY_HOST: docker.pkg.github.com
     STAGING_URL: http://staging.journali.nl
     STAGING_SERVICE: journali-staging_api
+    STAGING_NETWORK: journali-staging_net
     PRODUCTION_URL: http://journali.nl
     PRODUCTION_SERVICE: journali-production_api
+    PRODUCTION_NETWORK: journali-production_net
 
 jobs:
     deliver:
         runs-on: self-hosted
+        outputs:
+            image: ${{ steps.publish.outputs.tag }}
         steps:
             -   uses: actions/checkout@v2
             -   name: publish api docker image
+                id: publish
                 uses: elgohr/Publish-Docker-Github-Action@master
                 with:
-                    name: wesleyklop/journali-api/journali-api
+                    name: ${{ env.IMAGE_NAME }}
                     username: ${{ github.actor }}
                     password: ${{ github.token }}
                     registry: ${{ env.REGISTRY_HOST }}
@@ -34,10 +42,11 @@ jobs:
         needs: [deliver]
         steps:
             -   name: set environment variables if staging
-                if: ${{ github.event_name == 'push' }}
+                if: ${{ github.event_name == 'pull_request' }}
                 uses: allenevans/set-env@v1.0.0
                 with:
                     SERVICE: ${{ env.STAGING_SERVICE }}
+                    NETWORK: ${{ env.STAGING_NETWORK }}
                     URL: ${{ env.STAGING_URL }}
                     ENV_NAME: staging
             -   name: set environment variables if production
@@ -45,6 +54,7 @@ jobs:
                 uses: allenevans/set-env@v1.0.0
                 with:
                     SERVICE: ${{ env.PRODUCTION_SERVICE }}
+                    NETWORK: ${{ env.STAGING_NETWORK }}
                     URL: ${{ env.PRODUCTION_URL }}
                     ENV_NAME: production
 
@@ -57,9 +67,26 @@ jobs:
                     step: start
                     token: ${{ github.token }}
                     env: ${{ env.ENV_NAME }}
-                # TODO: Migrate database
+
+            # Migrate database part
+            -   uses: actions/checkout@v2
+            -   name: Migrate database
+                run: |
+                    docker run --rm \
+                      --network ${{ env.NETWORK }} \
+                      -e DATABASE_URL \
+                      -v ${{ github.workspace }}/migrations:/root/migrations
+                    christophwurst/diesel-cli diesel migration run
+
+            # Deploy new api version
             -   name: deploy new api version
-                run: docker service update --update-failure-action=rollback --with-registry-auth --force ${{ env.SERVICE }}
+                run: |
+                    docker service update \
+                      --update-failure-action=rollback \
+                      --with-registry-auth \
+                      --image ${{ env.IMAGE_NAME }}:${{ jobs.deliver.output.tag }} \
+                    ${{ env.SERVICE }}
+
             -   name: update deployment status
                 uses: bobheadxi/deployments@master
                 if: always()
