--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,7 +1,6 @@
 name: deploy api
 
 on:
-    pull_request:
     push:
         branches:
             - master
@@ -57,7 +56,7 @@ jobs:
         needs: [deliver]
         steps:
             -   name: set environment variables if staging
-                if: ${{ github.event_name == 'pull_request' }}
+                if: ${{ github.event_name == 'push' }}
                 uses: allenevans/set-env@v1.0.0
                 with:
                     SERVICE: ${{ env.STAGING_SERVICE }}
