--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ actix-rt = "1.1.1"
 env_logger = "*"
 diesel = { version = "1.4.3", features = ["postgres", "uuidv07", "r2d2"] }
 dotenv = "*"
+load-dotenv = "*"
 
 [features]
 # Treat warnings as a build error
