--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,12 +43,15 @@ jobs:
             -   name: publish api docker image
                 id: publish
                 uses: elgohr/Publish-Docker-Github-Action@master
+                env:
+                    RUST_APP_VERSION: ${{ github.sha }}
                 with:
                     name: ${{ env.IMAGE_NAME }}
                     username: ${{ github.actor }}
                     password: ${{ github.token }}
                     registry: ${{ env.REGISTRY_HOST }}
                     tag_semver: true
+                    buildargs: RUST_APP_VERSION
 
     deploy:
         name: deploy to an environment
@@ -99,6 +102,7 @@ jobs:
                       --update-failure-action=rollback \
                       --with-registry-auth \
                       --image ${{ needs.deliver.outputs.image }} \
+                      --force \
                     ${{ env.SERVICE }}
 
             -   name: update deployment status
