use the env file in the build/check/lint/fmt 'rs

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -6,6 +6,9 @@ on:
             - master
     pull_request:
 
+env:
+    RUST_APP_VERSION: ${{ github.sha }}
+ 
 jobs:
     check:
         name: check
