--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -6,7 +6,9 @@ on:
             - master
     pull_request:
 
-
+env:
+  RUST_APP_VERSION: ${{ github.sha }}
+ 
 jobs:
   check:
     name: Rust project
