Dabbling with pages

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,11 +10,12 @@ edition = "2018"
 actix-web = "2.0.0"
 actix-rt = "1.1.1"
 env_logger = "*"
-diesel = { version = "1.4.4", features = ["postgres", "uuidv07", "r2d2"] }
+diesel = { version = "1.4.4", features = ["postgres", "uuidv07", "r2d2", "chrono"] }
 dotenv = "*"
 load-dotenv = "*"
-uuid = { version="*", features= ["serde"] }
+uuid = { version="*", features= ["serde", "v4"] }
 serde = "*"
+chrono = "*"
 
 [features]
 # Treat warnings as a build error
