--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,11 +11,13 @@ actix-web = "2.0.0"
 actix-rt = "1.1.1"
 actix-web-httpauth = "*"
 env_logger = "*"
+log = "*"
 diesel = { version = "1.4.4", features = ["postgres", "uuidv07", "r2d2", "chrono"] }
 dotenv = "*"
 load-dotenv = "*"
 uuid = { version="*", features= ["serde", "v4"] }
 serde = "*"
+serde_json = "*"
 chrono = {version = "*", features = ["serde"]}
 jsonwebtoken = "7.1.0"
 bcrypt = "0.6.1"
