--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
 name = "journali-api"
-version = "0.1.0"
-authors = ["Dodo <kasper199914@gmail.com>"]
+version = "1.0.0"
+authors = [
+"Dodo <kasper199914@gmail.com>",
+"Wesley <wesley19097@gmail.com> (https://wesley.io)"
+]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
