--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -41,6 +41,50 @@ jobs:
           command: check
           args: --features "strict"
 
+  test:
+    name: test with coverage
+    runs-on: ubuntu-latest
+    services:
+      postgres:
+        image: postgres:latest
+        ports:
+          - 5432/tcp
+        env:
+          POSTGRES_DB: journali
+          POSTGRES_PASSWORD: journali
+          POSTGRES_USER: journali
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      - name: Install stable toolchain
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          override: true
+      - name: Run cargo-tarpaulin
+        uses: WesleyKlop/tarpaulin@output-option
+        with:
+          out-type: Lcov
+          version: '0.12.3'
+        env:
+          DATABASE_URL: postgres://journali:journali@localhost:${{ job.services.postgres.ports['5432'] }}/journali
+      - name: Archive code coverage results
+        uses: actions/upload-artifact@v1
+        with:
+          name: code-coverage-report
+          path: lcov.info
+      - name: report coverage
+        uses: romeovs/lcov-reporter-action@v0.2.17
+        if: ${{ github.event_name == 'pull_request' }}
+        with:
+          github-token: ${{ github.token }}
+          lcov-file: lcov.info
+      - name: Run codacy-coverage-reporter
+        uses: WesleyKlop/codacy-coverage-reporter-action@add-report-file-argument
+        with:
+          report-file: lcov.info
+          project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
+
   fmt:
     name: fmt
     runs-on: ubuntu-latest
