Add workflow step for running database migrations

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -64,7 +64,9 @@ jobs:
       - name: Migrate database
         uses: ducharmemp/diesel-cli-action@0.1.0
         with:
-          migration-directories: migrations
+          migration_directories: migrations
+        env:
+          DATABASE_URL: postgres://journali:journali@postgres:5432/journali
       - name: Run cargo-tarpaulin
         uses: WesleyKlop/tarpaulin@output-option
         with:
